# piano

./: CMakeLists.txt  README.md  install.sh
bash/: play_MIDI
examples/: full_scale.txt
include/: game.h  note.h  play_screen.h  rect_struct.h
resources/: a#2.mid  a#3.mid  a#4.mid  a#5.mid  a2.mid  a3.mid  a4.mid  a5.mid  b2.mid  b3.mid  b4.mid  b5.mid  c#2.mid  c#3.mid  c#4.mid  c#5.mid  c2.mid  c3.mid  c4.mid  c5.mid  d#2.mid  d#3.mid  d#4.mid  d#5.mid  d2.mid  d3.mid  d4.mid  d5.mid  e2.mid  e3.mid  e4.mid  e5.mid  f#2.mid  f#3.mid  f#4.mid  f#5.mid  f2.mid  f3.mid  f4.mid  f5.mid  (+8 more)
src/: main.cpp  note.cpp  piano.cpp  play_screen.cpp
